Fix alignment

--- a/css/main.scss
+++ b/css/main.scss
@@ -594,7 +594,7 @@ body {
 
         .topNavItem {
           text-decoration: none;
-          color: $greyish;
+          color: $lightGrey;
           font-size: 15px;
           font-weight: 200;
           text-align: center;
